--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,25 +2,43 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "sideEffects": [
+    "**/*.css"
+  ],
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./style.css": "./dist/index.css",
+    "./NextUIProvider": "./src/nextui/provider.tsx",
+    "./NextUIButton": "./src/nextui/button.tsx",
+    "./NextUICard": "./src/nextui/card.tsx",
+    "./NextUIChip": "./src/nextui/chip.tsx",
+    "./NextUISelect": "./src/nextui/select.tsx",
+    "./ReactIcons": "./src/icons/react-icons.tsx",
+    "./IconifyIcons": "./src/icons/iconify.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component"
+    "generate:component": "turbo gen react-component",
+    "build": "tailwindcss -i ./src/style.css -o ./dist/index.css",
+    "dev": "tailwindcss -i ./src/style.css -o ./dist/index.css --watch"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.10.12",
-    "@types/node": "^20.5.2",
     "@types/eslint": "^8.44.7",
+    "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.53.0",
     "react": "^18.2.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/theme": "^2.1.17",
+    "framer-motion": "^10.16.16",
+    "react-icons": "^4.12.0"
   }
 }
