--- a/apps/next_/tsconfig.json
+++ b/apps/next_/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@repo/typescript-config/next_.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
