--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,12 +27,15 @@
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.10.12",
     "@types/eslint": "^8.44.7",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.53.0",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
