--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "@repo/constants",
+  "name": "@repo/utils",
   "version": "0.0.0",
   "private": true,
   "exports": {
     ".": "./src/index.ts"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "test": "jest --rootDir src --coverage --coverageDirectory ../coverage"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.44.7",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.5.2",
     "eslint": "^8.53.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
