--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,17 +7,19 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "test": "jest --rootDir src --coverage --coverageDirectory ../coverage"
+    "test": "vitest run --coverage"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@testing-library/react": "^13.4.0",
     "@types/eslint": "^8.44.7",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.5.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.1.3",
     "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "jsdom": "^23.0.1",
+    "typescript": "^5.2.2",
+    "vitest": "^1.1.3"
   }
 }
