Replace jest to vitest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "cSpell.words": ["Astro", "Nuxt", "qwik"]
+  "cSpell.words": ["Astro", "Nuxt", "qwik", "testid"]
 }
