--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,32 +11,31 @@
     "./NextUIButton": "./src/nextui/button.tsx",
     "./NextUICard": "./src/nextui/card.tsx",
     "./NextUIChip": "./src/nextui/chip.tsx",
-    "./NextUISelect": "./src/nextui/select.tsx",
     "./ReactIcons": "./src/icons/react-icons.tsx",
     "./IconifyIcons": "./src/icons/iconify.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
     "build": "tailwindcss -i ./src/style.css -o ./dist/index.css",
-    "dev": "tailwindcss -i ./src/style.css -o ./dist/index.css --watch"
+    "test": "vitest run --coverage"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^1.10.12",
+    "@testing-library/react": "^13.4.0",
     "@types/eslint": "^8.44.7",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.1.3",
     "eslint": "^8.53.0",
-    "jest": "^29.7.0",
+    "jsdom": "^23.0.1",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.1.3"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
