--- a/apps/next_/package.json
+++ b/apps/next_/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "e2e": "dlx playwright test -c ./playwright.config.ts"
   },
   "dependencies": {
     "@next/third-parties": "^14.0.4",
@@ -21,6 +22,7 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
